@@ -63,6 +63,7 @@ and t_module = {
     mutable m_kind : module_kind ;
     mutable m_loc : Odoc_types.location ;
     mutable m_top_deps : Name.t list ; (** The toplevels module names this module depends on. *)
+    mutable m_code : string option ; (** The whole code of the module *)
   } 
 
 and module_type_alias = {
@@ -221,6 +222,7 @@ let rec module_elements ?(trans=true) m =
           m_is_interface = false ; m_file = "" ; m_kind = k ;
           m_loc = Odoc_types.dummy_loc ;
           m_top_deps = [] ;
+	  m_code = None ;
         }
 (*
       module_type_elements ~trans: trans
